[S] Correctly align version

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -87,6 +87,8 @@
     #nav-logo-version
     {
         color: #a7a7a7;
+        margin-left: 5px;
+        margin-top: 8px;
         font-size: 10px;
     }
 }
